# aptmc

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pubspec.yaml  version_manifest.json
.github/workflows/: cla-check.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/mmc9/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bottom_page.dart  config_parser.dart  download_file.dart  file_downloader.dart  home_page.dart  instance_add_page.dart  instance_edit_page.dart  instance_list_page.dart  java_path_finder.dart  main.dart  management_page.dart  mc_client.dart  minecraft_launcher.dart  myvars.dart  rust_downloader.dart  utils.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: downloader.rs  lib.rs  main.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
