[package]
name = "rust_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
async-fs = "2.1.2"
eframe = "0.29.1"
egui = "0.29.1"
git2 = "0.19.0"
lazy_static = "1.5.0"
reqwest = "0.12.9"
sha1 = "0.10.6"
tokio = {version="1.42.0",features=["full","fs","io-util"]}

[lib]
crate-type = ["cdylib"]
